# atomspace-rpc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  sample.scm
specs/: atom_server.proto
src/: AtomServiceClient.cpp  AtomServiceClient.h  AtomServiceUtils.cpp  AtomServiceUtils.h  AtomspaceService.cpp  CMakeLists.txt  atom_server.py
src/guile/: AtomServiceSCM.cpp  CMakeLists.txt  atom-service.scm  grpc.scm
src/manager/: AtomSpaceManager.cpp  AtomSpaceManager.h  Timer.h
src/py/: __init__.py  atom_server_pb2.py  atom_server_pb2.pyi  atom_server_pb2_grpc.py  atomservice_utils.py  atomspace_service.py  utils.py
tests/: AtomServiceUtilsUTest.cxxtest  CMakeLists.txt  sample.scm
tests/manager/: AtomSpaceManagerUTest.cxxtest  CMakeLists.txt  settings.json
